--- a/templates/frontpage_guest.mustache
+++ b/templates/frontpage_guest.mustache
@@ -61,11 +61,10 @@
 
     {{> theme_uems/navbar }}
 
-    {{> theme_uems/frontpage_guest_slideshow }}
-
     <div id="page" data-region="mainpage" data-usertour="scroller" class="drawers {{#blockdraweropen}}show-drawer-right{{/blockdraweropen}} drag-container">
-        <div id="topofscroll" class="main-inner">
+        {{> theme_uems/frontpage_guest_slideshow }}
 
+        <div id="topofscroll" class="main-inner">
             {{{ output.full_header }}}
 
             <div id="page-content" class="pb-3 d-print-block">
@@ -79,6 +78,22 @@
                 </div>
             </div>
         </div>
+
+        <h3>Cursos favoritos</h3>
+
+        <div class="card-deck">
+            {{#favouritecourses}}
+                <div class="card">
+                    <img class="card-img-top" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22362%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20362%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_18871fa396f%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A18pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_18871fa396f%22%3E%3Crect%20width%3D%22362%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22133.95000076293945%22%20y%3D%22107.5%22%3E362x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">{{fullname}}</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            {{/favouritecourses}}
+        </div>
+
         {{> theme_boost/footer }}
     </div>
     {{{ output.standard_after_main_region_html }}}
