--- a/templates/frontpage_guest_slideshow.mustache
+++ b/templates/frontpage_guest_slideshow.mustache
@@ -1,29 +1,26 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1" class=""></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="640" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">First slide</text></svg>
-
+<div id="uemsslideshow" class="container-fluid">
+    <div id="carousel-indicators" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+            {{#slides.slides}}
+                <div class="carousel-item {{#active}}active{{/active}}">
+                    <img src="{{image}}" alt="" class="w-100">
+                    <div class="carousel-caption d-none d-md-block">
+                        {{#text}}
+                            <div class="caption">
+                                {{{.}}}
+                            </div>
+                        {{/text}}
+                    </div>
+                </div>
+            {{/slides.slides}}
         </div>
-        <div class="carousel-item active carousel-item-left">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="640" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second slide</text></svg>
-
-        </div>
-        <div class="carousel-item carousel-item-next carousel-item-left">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="640" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333" dy=".3em">Third slide</text></svg>
-
-        </div>
+        <a class="carousel-control-prev" href="#carousel-indicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">{{#str}}previous{{/str}}</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel-indicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">{{#str}}next{{/str}}</span>
+        </a>
     </div>
-    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </button>
 </div>
